Filters titles for markdown content.
Fixes #1042.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article>
 <header><hgroup>
 	<span aria-label="page type">Blog</span>
-    <h1>{{ page.title | replace: ' - ', ': ' }}</h1>
+    <h1>{{ page.title | markdownify | remove: '<p>' | remove: '</p>' | replace: ' - ', ': ' }}</h1>
     <p class="metadata">
         By <span class="author">{{ authorstring | strip }}</span> on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time>
     </p>
