Adds root vars for custom SLab colors.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,6 +49,23 @@ Individual post pages
 	--uvalib-secondary-teal: #25CAD3;
 	--uvalib-secondary-magenta: #EF3F6B;
 	--uvalib-secondary-green: #008000;
+
+	/*Custom SLab Colors*/
+	--blue-alt-dark:#005679;
+	--blue-alt:#007BAC;
+	--blue-alt-light:#55C4EC;
+	--blue-alt-lighter:#91D8F2;
+	--blue-alt-lightest:#BFE7F7;
+	--teal-darker:#16777C;
+	--teal-dark:#1DA1A8;
+	--teal:#25CAD3;
+	--teal-light:#5BD7DE;
+	--teal-lightest:#C8F2F4;
+	--grape:rgb(111, 45, 189);
+	--pale-aqua:rgb(184, 208, 235);
+	--diamond: rgb(185, 250, 248);
+	--darkpastelpurple: rgb(154, 119, 210);
+	--medskyblue:rgb(117, 227, 239);
 }
 
 /********************************************************************/
