Default styles for links. Fixes #1046.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,13 +109,18 @@ img {
 
 a {
 	&:link{
+		color: var(--blue-alt-dark);
 	}
 	&:visited{
+		color: var(--blue-alt);
 	}
 	&:hover,
 	&:focus {
+		color: var(--blue-alt-dark);
+		text-decoration:none;
 	}
 	&:active{
+		color: var(--uvalib-text-almost-black);
 	}
 }
 
