Replaces 3 DH pages w/1...
Gets rid of DH pedagogy, code + design, critical DH
Adds 1 “Digital Humanities” page (so “Consult” nav has 3 dropdown items—DH, Spatial Tech, Makerspace).
The /digital-humanities page has a short intro that links to anchors on the page’s 3 sections, then 3 sections for “Critical DH: DH theory + scholarly field, “”DH Projects: Project Design + Management, Code + Design, Methods Training”, and “DH Pedagogy: Pedagogical Consultation + Collaboration”.
These reuse the text from the existing pages, except I commented out the list of staff at the bottom of /code-sign for now. I’m thinking that post-launch we could do similar to the /makerspace staff photo grid, where each person lists the sub-areas of DH you can contact them about (like /makerspace lists our maker skills)
* keeps 3 old DHy pages in /pages/drafts for now, for easy reference

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,7 +29,7 @@ Individual post pages
 	--adobe-caslon-pro: adobe-caslon-pro, Garamond, serif;
 	--bodoni-urw: bodoni-urw, serif;
 
-	/* Brand Color Palate*/
+	/* Brand Color Palette*/
 	--uvalib-main-rotunda-orange: #E57200;
 	--uvalib-main-jefferson-blue: #232D4B;
 	--uvalib-main-white: #FFFFFF;
