--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -14,7 +14,7 @@ layout: default
 
 <div class="content">
 
-<div class="project-stats-box">
+<div class="stats-box">
 	<h2>Details</h2>
 	<ul>
 		{% if page.start-year !=  nil and page.end-year != nil %}
