--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -645,7 +645,7 @@ body.people .gallery {
 
 }
 
-#alumni ul {
+#alumni ul, #students ul {
 	list-style:none;
 	margin:0;
 	padding: 0;
@@ -658,9 +658,25 @@ body.people .gallery {
 
 	a {
 		text-decoration:none;
-		display:block;
+		display:block
+	}
+	
+	li {
+	break-inside: avoid-column;
+	}
+}
+
+#alumni ul a {
+	border-bottom: 1px solid rgba(0,0,0,0.1);
+	padding: 0.5rem 1rem;
+}
+
+#students ul {
+	a {
+		padding: 0.5rem 0rem;
+	}
+	li {
 		border-bottom: 1px solid rgba(0,0,0,0.1);
-		padding: 0.5rem 1rem;
 	}
 }
 
