homepage events count, recent-post spacing
* reduces homepage events list to most recent 4
* increases visual separation between homepage blog posts

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -472,9 +472,14 @@ section.feature {
 			}
 		}
 
-		#recent-posts li + li:before {
-
+		#recent-posts li {
+			padding-bottom: 10px;
 		}
+		
+		#recent-posts h3 {
+			line-height: 1em;
+		}
+		
 		#recent-activity li + li:before {
 			display:block;
 			content: ' ';
