Adds library-branded logotype.

--- a/_includes/site-banner.html
+++ b/_includes/site-banner.html
@@ -2,7 +2,8 @@
 <div id="scholarslab-header">
     <hgroup>
     <a href="{{ site.url }}" id="slab-logo" aria-label="Scholars' Lab home">
-        Scholars’ Lab
+        <img src="/assets/img/logos/slab-logos/Library_SLab_Color.png"
+        alt="University of Virginia Library | Scholars' Lab">
     </a>
     </hgroup>
     <nav id="global-navigation" aria-label="Website Navigation">
