--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -7,7 +7,7 @@ layout: default
 
 <header>
 	<hgroup>
-		<span class="eyebrow">Projects</span>
+		<span class="eyebrow"><a href="{{ site.url }}/work">Projects</a></span>
 		<h1>{{ page.title | replace: ' - ', ': ' }}</h1>
 	</hgroup>
 </header>
