--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -400,6 +400,10 @@ section.feature {
 	div {
 		background: white;
 	}
+	
+	div:not(:last-child) {
+	margin-bottom: 30px;
+	}
 
 	div h2 {
 		margin-top:0;
@@ -418,14 +422,7 @@ section.feature {
 	}
 
 	&#updates {
-		display:flex;
-		flex-direction: row;
-		flex-wrap: nowrap;
-		gap: 2rem;
-		padding: 2rem 3.7rem;
-		div {
-			flex:1;
-		}
+
 
 		h2 {
 			margin:0 0 2rem -1.7rem;
@@ -531,6 +528,17 @@ section.feature {
 		display:flex;
 		gap: 1rem;
 
+		&#updates {
+			display:flex;
+			flex-direction: row;
+			flex-wrap: nowrap;
+			gap: 2rem;
+			padding: 2rem 3.7rem;
+			div {
+				flex:1;
+			}
+		}
+		
 		&:nth-child(odd) {
 			flex-direction: row-reverse;
 		}
@@ -542,6 +550,7 @@ section.feature {
 		div,figure {
 			flex:1;
 		}
+		
 	}
 }
 
