Missing credits, links reinstated
* adds back homepage picture credits that were removed; adds back their styles
* adds back strengths list pointing to right link
* fixes multiple references to critical-dh and dh-pedagogy pages

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -561,6 +561,12 @@ section.feature {
 	}
 }
 
+.photo-byline {
+	color: var(--uvalib-text-dk-grey);
+	font-style: italic;
+	font-size: 16px;
+}
+
 
 /********************************************************************/
 /* Projects browse */
@@ -845,7 +851,6 @@ body.people .gallery {
 	color: var(--uvalib-text-dk-grey);
 	font-style: italic;
 }
-
 
 /********************************************************************/
 /* Individual post pages */
