Fixed typo, added Ronda's libcal link

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -54,7 +54,7 @@ layout: default
 		{% endif %}
 
 		{% if page.libcal %}
-			<li>span>Book: </span><a href="{{ page.libcal }}">Schedule an appointment</a></li>
+			<li><span>Book: </span><a href="{{ page.libcal }}">Schedule an appointment</a></li>
 		{% endif %}
 
 		{% if page.department != nil and page.department != 'None' %}
