More specific selector for homepage introduction.
Avoids clashing with other elements that may have
`introduction` as the value for the ID attribute.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -354,7 +354,7 @@ h1,h2,h3,h4 {
 
 /********************************************************************/
 /* Homepage Styles */
-#introduction {
+.home #introduction {
 	padding: 0 2rem;
 	display:flex;
 	flex-direction:column;
